# JSON_RPC_server

./: .gitignore  CMakeLists.txt  common.h  config.h.in  database_obj.cpp  database_obj.h  doxygen.conf.in  html_server.cpp  html_server.h  http_recv_buffers.h  json_rpc_server.cpp  json_rpc_server.h  jsonrpc.html  jsonrpc.html.in  main.cpp  readme.md
Server/: CMakeLists.txt  server.cpp  server.h  servers_wrapper.cpp  servers_wrapper.h  tcpHandler.h  testhtml.h
ServersCore/: CMakeLists.txt  server.cpp  server.h  servers_wrapper.cpp  servers_wrapper.h
ServersCore/include/: common.h  server.h  servers_wrapper.h
docs/html/: index.html
docs/latex/: refman.tex
tests/: GET_html_request.txt  POST_request_addLink.txt  POST_request_addProperty.txt  POST_request_correct.txt  POST_request_deleteProperty.txt  POST_request_incorrect.txt  POST_request_listProperties.txt  POST_request_setLinkText.txt  POST_request_setLinkURL.txt  POST_test.py
